# website-wasm

./: Cargo.toml  README.md  build.sh  run.sh
src/components/: contribution_card.rs  contribution_list.rs  experience_card.rs  experience_header.rs  experience_list.rs  footer.rs  header.rs  home_header.rs  menu_strip.rs  project_card.rs  project_header.rs  project_list.rs  social_links.rs
src/data/: contribution_list.rs  experience_list.rs  extracurricular_list.rs  project_list.rs
src/data/experiences/: ibm.rs  ops.rs  spiretrading.rs  uoft.rs
src/data/projects/: game_of_life.rs  joshuto.rs  ruiji.rs  space_farmer_bot.rs  website.rs
src/pages/: experience_details.rs  home.rs  page_template.rs  project_details.rs
