[package]
name = "website-wasm"
version = "0.1.0"
authors = ["Jiayi Zhao <jeff.no.zhao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

#[features]
#default = ["console_error_panic_hook"]

[dependencies]
lazy_static = "^1"
#serde = "^1"
#serde_derive = "^1"
#serde_json = "^1"
#wasm-bindgen-futures = "^0"
#yew = "^0"
#yew-router = "^0"
#
console_log = "^0.1"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = "^0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "^0"
features = [ "serde-serialize" ]

[dependencies.web-sys]
#version = "^0"
#features = [ "ScrollToOptions", "ScrollBehavior", "Window", "Request" ]
#
version = "^0.3"
# Add more web-sys API's as you need them
#features = [
#  "HtmlInputElement",
#]
features = [
    "ScrollToOptions",
    "ScrollBehavior",
    "Window",
    "Request",
    #"HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
